Revision history for {{$dist->name}}

{{$NEXT}}

2.016003  2012-12-07 15:54:29 CST6CDT
       - Fix bug in dup_check_source_auto and fk_check_source_auto.  If
         any of the broken things were multiple they explode in the hashref.
         The solution is to force the values to be resultsets, which is how
         the helper is documented anyway. (thanks MST for finding this)

2.016002  2012-11-17 15:31:12 CST6CDT
       - Put MetaYAML back in dist

2.016001  2012-11-02 17:52:43 CST6CDT
       - fix OnColumnChange to work with relationship based updates
         so $artist->update({ cd => $cd_obj }) now correctly triggers
         a change.  Thanks David Schmidt for the test
       - validate number of arguments to _change_column (David Schmidt)
       - fix name of Helper::ResultSet::Shortcut in SYNOPSIS

2.016000  2012-10-25 21:35:05 CST6CDT
       - Add Helper::ResultSet::Shortcut (Wes Malone)

2.015001  2012-09-13 21:19:40 America/Chicago
       - Correctly dep on Sub::Exporter::Progressive 0.001006

2.015000  2012-08-01 18:00:31 America/Chicago
       - Add order_by_visitor ::Util

2.014003  2012-07-28 14:21:26 America/Chicago
       - Add EXAMPLES to CorrelateRelationship

2.014002  2012-07-10 21:41:17 America/Chicago
       - Tests are fully in memory for speed and parallelization

2.014001  2012-07-03 08:34:21 America/Chicago
       - Stop breaking ::IgnoreWantarray with ::CorrelatedRelationship

2.014000  2012-06-30 00:16:13 America/Chicago
       - Add ::Row::ProxyResultSetUpdate helper
       - fully qualify columns in ::SelfResultSet

2.013003  2012-06-28 08:04:13 America/Chicago
       - Redist due to broken release

2.013002  2012-06-17 22:22:45 America/Chicago
       - Lots of misc documentation cleanup

2.013001  2012-06-11 17:40:04 America/Chicago
       - fix Changes (left off only change in 2.013000)

2.013000  2012-06-07 20:41:13 America/Chicago
       - Add Helper::Row::ProxyResultSetMethod

2.012000  2012-06-05 21:23:16 America/Chicago